# unicamp-covid-scraper

./: Main.hs  README.md  covid.cabal
