cabal-version:       >=1.10

name:                covid
version:             0.1.0.0
build-type:          Simple

executable covid
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14
  		     , http-conduit
  		     , tagsoup
  		     , text
  default-language:    Haskell2010
